Updating to work the way I want it to.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@raydeck/remove-stacks",
+  "name": "@raydeck/remove-aws-stacks",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
